src/objects/Apttus_Config2__CustomerPOItem__c/Apttus_Config2__CustomerPOItem__c.object-meta.xml
<CustomObject>
    <description>Represents a product or service item in a purchase order</description>
    <label>Customer PO Item</label>
    <nameField>
        <displayFormat>POI-{00000000}</displayFormat>
        <label>PO Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer PO Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>