src/objects/Apttus_Config2__CustomerPOItem__c/fields/QTO_POI_Customer_Document__c.field-meta.xml
<CustomField>
    <fullName>QTO_POI_Customer_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTO POI Customer Document</label>
    <referenceTo>Customer_Document__c</referenceTo>
    <relationshipLabel>Customer PO Items</relationshipLabel>
    <relationshipName>Customer_PO_Items</relationshipName>
    <type>Lookup</type>
</CustomField>