src/objects/Apttus_Config2__CustomerPOItem__c/fields/QTO_POI_Customer_Document_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>QTO_POI_Customer_Document_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QTO POI Customer Document Line Item</label>
    <referenceTo>Customer_Document_Line_Items__c</referenceTo>
    <relationshipLabel>Customer PO Items</relationshipLabel>
    <relationshipName>Customer_PO_Items</relationshipName>
    <type>Lookup</type>
</CustomField>